[package]
name = "cenv"
version = "1.1.0"
authors = ["JonShort <JonShort@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/JonShort/cenv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cenv_core = { path = "./cenv_core" }

[workspace]
members = [
  "cenv_core"
]
