# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "cenv"
version = "2.0.0"
authors = ["JonShort <JonShort@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JonShort/cenv"

[profile.release]
codegen-units = 1 # Maximum size-reduction optimisations
lto = true        # Enable "link time optimisation"
panic = "abort"   # Remove lengthy stack traces
strip = true      # Automatically strip symbols from the binary.

[dependencies]
cenv_core = { path = "./cenv_core" }

[workspace]
members = ["cenv_core"]
